tweaks after odeta's call

--- a/app/views/apps/_assessment_2205/views/partner/projects/activity/add/check-answers.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/activity/add/check-answers.html
@@ -285,9 +285,9 @@
                               </div>
                             </dl>
 
-          <h2 class="govuk-heading-m">Confirm your activity (h3)</h2>
-          <p class="govuk-body">By submitting an activity (h3) you are now able to report financial data.</p>
-          <a href="../../index?state=newActivity" class="govuk-button">Submit activity (h3)</a>
+          <h2 class="govuk-heading-m">Confirm your sub-activity (h3)</h2>
+          <p class="govuk-body">By submitting a sub-activity (h3) you are now able to report financial data.</p>
+          <a href="../../index?state=newActivity" class="govuk-button">Submit sub-activity (h3)</a>
           <!-- <a href="#">Save and  -->
 
 </div>
