--- a/app/views/apps/_assessment_2205/views/partner/projects/activity/add/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/activity/add/index.html
@@ -9,7 +9,7 @@
   <main class="govuk-main-wrapper">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <span class="govuk-caption-l">Sustainable energy and international development: beyond technology</span>
-      <h1 class="govuk-heading-xl">Add an activity (h3)</h1>
+      <h1 class="govuk-heading-xl">Add a sub-activity (h3)</h1>
     </legend>
 <div class="govuk-grid-row">
 <div class="govuk-grid-column-two-thirds">
@@ -917,10 +917,14 @@
           </select>
       </div>
 
-      <div class="govuk-form-group">
+      <div class="govuk-form-group hide">
         <label class="govuk-label" for="address-postcode">
-          Equivalence Note
+          Equivalence note
         </label>
+        <details class="govuk-details">
+          <summary>what is an equivalence note</summary>
+          <div class="govuk-details-body">Tell the user what this is</div>
+        </details>
         <textarea rows="8" cols="80" class="govuk-textarea" id="address-postcode" name="address-postcode" type="text"></textarea>
       </div>
 
