--- a/app/views/apps/_assessment_2205/views/partner/projects/add/check-answers.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/add/check-answers.html
@@ -111,7 +111,7 @@
           </dl>
 
           <h2 class="govuk-heading-m">Confirm your activity (h2)</h2>
-          <p class="govuk-body">By submitting an activity (h2) you can then add activities (h3) that belong to an activity (h2).</p>
+          <p class="govuk-body">By submitting an activity (h2) you can then add sub-activities (h3).</p>
           <a href="../index?state=newProject" class="govuk-button">Submit activity (h2)</a>
           <!-- <a href="#">Save and  -->
 
