--- a/app/views/apps/_assessment_2205/views/partner/projects/add/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/add/index.html
@@ -17,7 +17,7 @@
       <fieldset class="govuk-fieldset" aria-describedby="choose-oda-hint">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
           <h1 class="govuk-fieldset__heading">
-            Is your service ODA eligible?
+            Is your activity ODA eligible?
           </h1>
         </legend>
         <span id="choose-oda-hint" class="govuk-hint">
@@ -57,7 +57,7 @@
     <fieldset class="govuk-fieldset">
       <div class="govuk-form-group">
       <label class="govuk-label" for="chooseFundSelect">
-        What fund does this activity (h1) belong to?
+        What programme (activity h1) does this belong to?
       </label>
       <select id="select-fund" name="select-fund">
         <option value="" disabled selected></option>
