--- a/app/views/apps/_assessment_2205/views/partner/projects/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/index.html
@@ -11,16 +11,16 @@
       Activity (h2) added
     </h1>
     <div class="govuk-panel__body">
-      New activity (h2) ID is GB-GOV-13-91116<br>You can now <a href="activity/add/index.html"><strong>add activities (h3)</strong></a> to this activity (h2)
+      New activity (h2) ID is GB-GOV-13-91116<br>You can now <a href="activity/add/index.html"><strong>add sub-activities (h3)</strong></a> to this activity (h2)
     </div>
   </div>
 
   <div class="govuk-panel govuk-panel--confirmation hide" id="newActivity">
     <h1 class="govuk-panel__title">
-      Activity (h3) added
+      Sub-activity (h3) added
     </h1>
     <div class="govuk-panel__body">
-      New activity (h3) ID is GB-GOV-13-91116<br>You can now <a href="../trackers/index.html"><strong>report financial data</strong></a> for this activity (h3)
+      New sub-activity (h3) ID is GB-GOV-13-91116<br>You can now <a href="../trackers/index.html"><strong>report financial data</strong></a> for this activity (h3)
     </div>
   </div>
 
